--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "steroid",
   "version": "0.0.1",
   "description": "very futuristic",
-  "main": "run.js",
+  "main": "./build/run.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "tsc *.ts && tsc ~/project/watermelon/js/*.ts",
-    "start": "npm run compile && cross-env DEBUG=true electron .",
+    "compile": "tsc && copyfiles -f index.html build",
+    "lint": "eslint -c .eslintrc --ext .ts ./src",
+    "start": "npm run compile && electron ./build/run.js",
     "deploy": "electron-builder --linux"
   },
   "author": {
@@ -16,10 +16,14 @@
   "license": "MIT",
   "homepage": "https://github.com/cottons-kr/watermelon",
   "devDependencies": {
+    "@electron/remote": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "electron": "^17.1.2",
     "electron-builder": "^22.14.13",
+    "eslint": "^8.11.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
@@ -57,6 +61,7 @@
   "dependencies": {
     "@types/puppeteer": "^5.4.5",
     "billboard-top-100": "^2.6.2",
-    "puppeteer": "^13.5.1"
+    "puppeteer": "^13.5.1",
+    "puppeteer-core": "^13.5.1"
   }
 }
