--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/cottons-kr/watermelon",
   "devDependencies": {
     "@electron/remote": "^2.0.8",
+    "@types/youtube-player": "^5.5.6",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "copyfiles": "^2.4.1",
@@ -25,7 +26,8 @@
     "electron-builder": "^22.14.13",
     "eslint": "^8.11.0",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "youtube-player": "^5.5.2"
   },
   "build": {
     "productName": "watermelon",
