--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "electron": "^17.1.2",
     "electron-builder": "^22.14.13",
     "eslint": "^8.11.0",
+    "module-alias": "^2.2.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "youtube-player": "^5.5.2"
@@ -65,5 +66,8 @@
     "billboard-top-100": "^2.6.2",
     "puppeteer": "^13.5.1",
     "puppeteer-core": "^13.5.1"
+  },
+  "_moduleAliases": {
+    "@src": "./src"
   }
 }
