--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
       "module": "commonjs",
+      "esModuleInterop": true,
       "target": "ES2017",
       "noImplicitAny": true,
       "sourceMap": true,
