--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/cottons-kr/watermelon",
   "devDependencies": {
     "@electron/remote": "^2.0.8",
+    "@types/puppeteer": "^5.4.5",
     "@types/youtube-player": "^5.5.6",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
@@ -26,6 +27,7 @@
     "electron-builder": "^22.14.13",
     "eslint": "^8.11.0",
     "module-alias": "^2.2.2",
+    "puppeteer": "^13.5.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "youtube-player": "^5.5.2"
@@ -62,10 +64,7 @@
     }
   },
   "dependencies": {
-    "@types/puppeteer": "^5.4.5",
-    "billboard-top-100": "^2.6.2",
-    "puppeteer": "^13.5.1",
-    "puppeteer-core": "^13.5.1"
+    "billboard-top-100": "^2.6.2"
   },
   "_moduleAliases": {
     "@src": "./src"
