--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
       "paths": {
         "*": ["node_modules/*"]
       }
-    }
+    },
+    "include": ["src", "node_modules/@types/puppeteer/index.d.ts"]
   }
